# utils

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  implementation_plan.md  mkdocs.yml  plan.md  pyproject.toml
.github/workflows/: docs.yml  lint.yml  test.yml
docs/: changelog.md  cleaning.md  configuration.md  contributing.md  index.md  installation.md  ml_evaluation.md  plotting.md  quickstart.md
docs/api/: cleaning.md  config.md  ml_eval.md  plotting.md
docs/examples/: cleaning.ipynb  cleaning.md  ml_eval.md  plotting.ipynb  plotting.md
examples/: cleaning_examples.ipynb  ml_evaluation_examples.ipynb  plotting_examples.ipynb
src/ds_utils/: __init__.py
src/ds_utils/cleaning/: __init__.py  extensions.py  validation.py
src/ds_utils/config/: __init__.py  defaults.py  logging_config.py  plot_styles.yaml
src/ds_utils/ml_eval/: __init__.py  classification.py  feature_importance.py  learning_curves.py  metrics.py  regression.py
src/ds_utils/plotting/: __init__.py  core.py  distributions.py  standard.py  styles.py
tests/: __init__.py  conftest.py
tests/test_cleaning/: test_extensions.py  test_validation.py
tests/test_ml_eval/: __init__.py  test_classification.py  test_metrics.py
tests/test_plotting/: test_core.py  test_standard.py
